--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,5 @@
-
-
 .navContainer {
-  padding: 6px;
+  padding: 0.5rem 2rem;
   border-radius: 5px;
   box-shadow: 1px 2px 7px 0px rgba(0, 0, 0, 0.75);
 }
@@ -14,24 +12,23 @@
 
 #navUL li {
   display: inline;
-
 }
 
 .remainingNav li {
   margin-left: 2rem;
-  border: #509E2F 1px solid;
+  border: #509e2f 1px solid;
   padding: 5px 15px;
   border-radius: 15px;
 }
 
 .remainingNav li:hover {
   text-decoration: underline;
-  text-decoration-color: #509E2F;
+  text-decoration-color: #509e2f;
   text-decoration-thickness: 5px;
   text-underline-offset: 5px; /* Adjust the value as needed */
 }
 
-#navUL li a{
+#navUL li a {
   text-decoration: none;
   color: black;
 }
