--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,6 +14,21 @@
   display: inline;
 }
 
+#navUL li a {
+  text-decoration: none;
+  color: black;
+}
+
+.logo img {
+  border-radius: 50%;
+}
+
+.remainingNav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .remainingNav li {
   margin-left: 2rem;
   border: #509e2f 1px solid;
@@ -26,9 +41,4 @@
   text-decoration-color: #509e2f;
   text-decoration-thickness: 5px;
   text-underline-offset: 5px; /* Adjust the value as needed */
-}
-
-#navUL li a {
-  text-decoration: none;
-  color: black;
 }
