renamed image and removed overflow body

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,26 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
   box-sizing: border-box;
 }
 
-body{
-  overflow: hidden;
+::selection {
+  background: rgba(26, 188, 156, 0.3);
 }
-::selection{
-  background: rgba(26,188,156,0.3);
-}
-.container{
+.container {
   max-width: 440px;
   padding: 0 20px;
   margin: 170px auto;
 }
-.wrapper{
+.wrapper {
   width: 100%;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
 }
-.wrapper .title{
+.wrapper .title {
   height: 90px;
   background: #16a085;
   border-radius: 5px 5px 0 0;
@@ -31,15 +28,15 @@ body{
   align-items: center;
   justify-content: center;
 }
-.wrapper form{
+.wrapper form {
   padding: 30px 25px 25px 25px;
 }
-.wrapper form .row{
+.wrapper form .row {
   height: 45px;
   margin-bottom: 15px;
   position: relative;
 }
-.wrapper form .row input{
+.wrapper form .row input {
   height: 100%;
   width: 100%;
   outline: none;
@@ -49,14 +46,14 @@ body{
   font-size: 16px;
   transition: all 0.3s ease;
 }
-form .row input:focus{
+form .row input:focus {
   border-color: #16a085;
-  box-shadow: inset 0px 0px 2px 2px rgba(26,188,156,0.25);
+  box-shadow: inset 0px 0px 2px 2px rgba(26, 188, 156, 0.25);
 }
-form .row input::placeholder{
+form .row input::placeholder {
   color: #999;
 }
-.wrapper form .row i{
+.wrapper form .row i {
   position: absolute;
   width: 47px;
   height: 100%;
@@ -69,18 +66,18 @@ form .row input::placeholder{
   align-items: center;
   justify-content: center;
 }
-.wrapper form .pass{
+.wrapper form .pass {
   margin: -8px 0 20px 0;
 }
-.wrapper form .pass a{
+.wrapper form .pass a {
   color: #16a085;
   font-size: 17px;
   text-decoration: none;
 }
-.wrapper form .pass a:hover{
+.wrapper form .pass a:hover {
   text-decoration: underline;
 }
-.wrapper form .button input{
+.wrapper form .button input {
   color: #fff;
   font-size: 20px;
   font-weight: 500;
@@ -89,18 +86,18 @@ form .row input::placeholder{
   border: 1px solid #16a085;
   cursor: pointer;
 }
-form .button input:hover{
+form .button input:hover {
   background: #12876f;
 }
-.wrapper form .signup-link{
+.wrapper form .signup-link {
   text-align: center;
   margin-top: 20px;
   font-size: 17px;
 }
-.wrapper form .signup-link a{
+.wrapper form .signup-link a {
   color: #16a085;
   text-decoration: none;
 }
-form .signup-link a:hover{
+form .signup-link a:hover {
   text-decoration: underline;
 }
