--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,101 +3,86 @@
   box-sizing: border-box;
 }
 
-::selection {
-  background: rgba(26, 188, 156, 0.3);
+.containerLogin{
+  height:80vh;
+  width: 60%;
+
+  display: flex;
+  margin:40px auto;
+  border: 1px solid black;
+  
+
 }
-.container {
-  max-width: 440px;
-  padding: 0 20px;
-  margin: 170px auto;
+
+.leftLogin{
+  height: 100%;
+  width: 40%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),url('./images/loginImg.png');
 }
-.wrapper {
-  width: 100%;
-  background: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
-}
-.wrapper .title {
-  height: 90px;
-  background: #16a085;
-  border-radius: 5px 5px 0 0;
-  color: #fff;
-  font-size: 30px;
-  font-weight: 600;
+
+.rightLogin{
+  height: 100%;
+  width: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
-.wrapper form {
-  padding: 30px 25px 25px 25px;
-}
-.wrapper form .row {
-  height: 45px;
-  margin-bottom: 15px;
-  position: relative;
-}
-.wrapper form .row input {
-  height: 100%;
-  width: 100%;
-  outline: none;
-  padding-left: 60px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  font-size: 16px;
-  transition: all 0.3s ease;
-}
-form .row input:focus {
-  border-color: #16a085;
-  box-shadow: inset 0px 0px 2px 2px rgba(26, 188, 156, 0.25);
-}
-form .row input::placeholder {
-  color: #999;
-}
-.wrapper form .row i {
-  position: absolute;
-  width: 47px;
-  height: 100%;
-  color: #fff;
-  font-size: 18px;
-  background: #16a085;
-  border: 1px solid #16a085;
-  border-radius: 5px 0 0 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.wrapper form .pass {
-  margin: -8px 0 20px 0;
-}
-.wrapper form .pass a {
-  color: #16a085;
-  font-size: 17px;
-  text-decoration: none;
-}
-.wrapper form .pass a:hover {
-  text-decoration: underline;
-}
-.wrapper form .button input {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 500;
-  padding-left: 0px;
-  background: #16a085;
-  border: 1px solid #16a085;
-  cursor: pointer;
-}
-form .button input:hover {
-  background: #12876f;
-}
-.wrapper form .signup-link {
+
+h1{
   text-align: center;
-  margin-top: 20px;
-  font-size: 17px;
 }
-.wrapper form .signup-link a {
-  color: #16a085;
-  text-decoration: none;
+label{
+  font-size: 30;
+
 }
-form .signup-link a:hover {
+
+#name,#password{
+  padding: 10px;
+  width: 300px;
+  margin: 10px 0;
+  font-size: 15px;
+}
+
+.buttonsLogin{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px ;
+  margin-bottom: 30px;
+
+}
+
+#loginButton, #cancelButton{
+  width: 30%;
+  height: 40px;
+  color: white;
+  border: none;
+  letter-spacing: 2px;
+  opacity: 0.8;
+
+}
+
+#loginButton{
+  background-color: #44115b;
+}
+
+#cancelButton{
+  background-color: #670724;
+}
+
+#loginButton:hover, #cancelButton:hover{
+  opacity: 1;
+}
+
+
+
+
+#signupButton{
   text-decoration: underline;
+  color: #44115b;
+  
+}
+
+#signupButton:hover{
+  text-decoration: none;
 }
