--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -20,6 +20,13 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),url('./images/loginImg.png');
 }
 
+#loginImg{
+  width: 100%;
+  height: 100%;
+}
+
+
+
 .rightLogin{
   height: 100%;
   width: 60%;
