--- a/src/components/RecipeCard/RecipeCard.css
+++ b/src/components/RecipeCard/RecipeCard.css
@@ -1,5 +1,15 @@
-img{
-    width: 30%;
-    object-fit: cover;
-    height: 200px;
+#recipeCard {
+  box-shadow: 0 0 5px grey;
+  border-radius: 5px;
+  padding: 1rem;
+  margin: 1rem;
+  width: 40%;
+}
+
+#card-img {
+  width: 100%;
+}
+
+#card-img img {
+  object-fit: cover;
 }
