--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -61,18 +61,14 @@ label{
 }
 
 #loginButton{
-  width: 30%;
+  width: 100%;
   height: 40px;
   color: white;
   border: none;
   letter-spacing: 2px;
   opacity: 0.8;
-
-}
-
-#loginButton{
   background-color: green;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 
