--- a/src/pages/SignUp/Signup.css
+++ b/src/pages/SignUp/Signup.css
@@ -8,6 +8,7 @@
     justify-content: center;
     box-shadow: 1px 1cap 26px 0px rgba(0, 0, 0, 0.75);
     margin-top:50px;
+    margin-bottom: 50px;
   
   }
   h1 {
