--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,8 +16,13 @@
 .logo-section {
   width: 35%;
   font-size: 14px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 40px;
+}
+
+.description {
+  font-size: 14px;
+  margin: 10px 0;
+  width: 80%;
 }
 
 .logo-section img {
@@ -28,9 +33,9 @@
 }
 
 .company-menu{
-  padding: 0 10px;
   font-size: 14px;
   width: 15%;
+  padding: 0 10px;
 }
 
 .company-menu h3{
@@ -45,19 +50,48 @@
 
 .company-menu ul li{
   margin: 5px 5px;
+}
+
+.company-menu ul li a {
   text-decoration: none;
   color: black;
 }
 
-.resouces-menu{
+.resources-menu{
   width: 15%;
   font-size: 14px;
+  padding: 0 10px;
+}
+
+.resources-menu h3{
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.resources-menu ul{
+  list-style-type: none;
+  padding: 0;
+}
+
+.resources-menu ul li{
+  margin: 5px 5px;
+}
+
+.resources-menu ul li a {
+  text-decoration: none;
+  color: black;
 }
 
 .subscribe-section{
   width: 35%;
   font-size: 14px;
-  padding-right: 25px;
+  padding: 0 10px;
+  margin-right: 10px;
+}
+
+.subscribe-section p{
+  font-size: 12px;
+  margin: 10px 0;
 }
 
 .subscribe-section img {
@@ -65,4 +99,24 @@
   height: 8vh;
   border-radius: 50%;
   box-shadow: 0px 5px 10px 1px rgb(87, 87, 87);
+}
+
+.subscribe-section input[type="email"] {
+  width: 60%;
+  height: 40px;
+  margin: 10px 0;
+  padding: 0 10px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+}
+
+.subscribe-section button {
+  width: 30%;
+  height: 40px;
+  margin: 10px 0;
+  padding: 0 10px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  background-color: #509e2f;
+  color: white;
 }
