--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,7 +15,8 @@
 .logo-section {
   width: 35%;
   font-size: 14px;
-  padding-left: 40px;
+  padding-left: 100px;
+
 }
 
 .description {
@@ -107,15 +108,19 @@
   padding: 0 10px;
   border: 1px solid #ced4da;
   border-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .subscribe-section button {
-  width: 30%;
+  width: 25%;
   height: 40px;
   margin: 10px 0;
   padding: 0 10px;
   border: 1px solid #ced4da;
   border-radius: 5px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   background-color: #509e2f;
   color: white;
 }
