--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,64 +3,64 @@
   box-sizing: border-box;
 }
 
-.containerLogin{
-  height:80vh;
+.containerLogin {
+  height: 80vh;
   width: 60%;
-
   display: flex;
-  margin:40px auto;
+  margin: 40px auto;
   border: 1px solid black;
-  
-
 }
 
-.leftLogin{
+.containerLogin label {
+  width: 100%;
+  font-size: 30;
+}
+
+.leftLogin {
   height: 100%;
   width: 50%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),url('./images/loginImg.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+    url("./images/loginImg.png");
 }
 
-#loginImg{
+#loginImg {
   width: 100%;
   height: 100%;
 }
 
-
-
-.rightLogin{
+.rightLogin {
   height: 100%;
   width: 50%;
+  padding: 0 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
-h1{
+.contentLogin {
+  width: 90%;
+}
+h1 {
   text-align: center;
   color: green;
 }
-label{
-  font-size: 30;
 
-}
-
-#name,#passwordLogin{
+#name,
+#passwordLogin {
   padding: 10px;
-  width: 300px;
+  width: 100%;
   margin: 10px 0;
   font-size: 15px;
 }
 
-.buttonsLogin{
+.buttonsLogin {
   /* display: flex;
   justify-content: space-around; */
-  margin-top: 20px ;
+  margin-top: 20px;
   margin-bottom: 30px;
-
 }
 
-#loginButton{
+#loginButton {
   width: 100%;
   height: 40px;
   color: white;
@@ -71,20 +71,15 @@ label{
   /* border-radius: 10px; */
 }
 
-
-#loginButton:hover{
+#loginButton:hover {
   opacity: 1;
 }
 
-
-
-
-#signupButton{
+#signupButton {
   text-decoration: underline;
   color: green;
-  
 }
 
-#signupButton:hover{
+#signupButton:hover {
   text-decoration: none;
 }
