--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
   border-radius: 5px;
   box-shadow: 1px 2px 7px 0px rgba(0, 0, 0, 0.75);
   margin: 10px 10px 1.5rem;
+  background-color: #f8f9fa;
 }
 
 #navUL {
