chore: Update Footer component styling for mobile responsiveness

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -123,3 +123,48 @@
   background-color: #509e2f;
   color: white;
 }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  .logo-section,
+  .company-menu,
+  .resources-menu,
+  .subscribe-section {
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+  }
+
+  .description{
+    text-align: center;
+    width: 100% ;
+  }
+
+  .logo-section {
+    text-align: center;
+  }
+
+  .logo-section img,
+  .subscribe-section img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .company-menu,
+  .resources-menu {
+    text-align: center;
+  }
+
+  .subscribe-section input[type="email"] {
+    width: 100%;
+  }
+
+  .subscribe-section button {
+    width: 100%;
+  }
+}
