--- a/src/pages/RecipeCollection/RecipeCollection.css
+++ b/src/pages/RecipeCollection/RecipeCollection.css
@@ -8,7 +8,7 @@
   font-weight: 700;
   text-align: center;
   width: 50%;
-  margin: 0 auto;
+  margin: 0 auto 1rem;
   text-shadow: 2px 1px 2px;
 }
 #collectionpage-topic span {
@@ -17,7 +17,7 @@
 }
 
 #collectionpage-buttons {
-  margin-right: 50px;
+  margin: 0 30px;
   display: flex;
   justify-content: space-between;
 }
@@ -35,15 +35,14 @@
 .createRecipeBtn {
   background-color: #509e2f;
   color: white;
-  height: 2rem;
+  height: 2.2rem;
   border-radius: 20px;
   padding: 5px 18px;
+}
+.createRecipeBtn a {
   display: flex;
   align-items: center;
-}
-
-.createRecipeBtn:hover {
-  background-color: #3f7c25;
+  gap: 0.3rem;
 }
 
 #collection-container {
@@ -52,4 +51,28 @@
   gap: 1vw 0.5vw;
   justify-content: center;
   margin: 1.5rem 0;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: white;
+}
+
+.hover-underline-animation:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
