--- a/src/pages/SignUp/Signup.css
+++ b/src/pages/SignUp/Signup.css
@@ -32,12 +32,9 @@ h1 {
   justify-content: space-between;
 }
 
-.ageDiv,
-.genderDiv {
-  width: 47%;
-}
 
-.emailDiv,
+
+.emailDiv,.passwordDiv,
 .usernameDiv {
   margin: 10px 50px;
 }
