--- a/src/pages/SignUp/Signup.css
+++ b/src/pages/SignUp/Signup.css
@@ -49,7 +49,7 @@ h1 {
   justify-content: center;
 }
 
-#submitSignup {
+.submitSignup {
   width: 100%;
   height: 40px;
   color: white;
@@ -61,7 +61,7 @@ h1 {
   margin-bottom: 10px;
 }
 
-#submitSignup:hover {
+.submitSignup:hover {
   opacity: 1;
 }
 
