--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -60,7 +60,7 @@ h1 {
   margin-bottom: 30px;
 }
 
-#loginButton {
+.loginButton {
   width: 100%;
   height: 40px;
   color: white;
@@ -71,7 +71,7 @@ h1 {
   /* border-radius: 10px; */
 }
 
-#loginButton:hover {
+.loginButton:hover {
   opacity: 1;
 }
 
