chore: Update social media icons in Footer component

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -124,6 +124,14 @@
   color: white;
 }
 
+.social-media {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  background-color: #f8f9fa;
+  padding-bottom: 5px;
+}
+
 @media screen and (max-width: 768px) {
   .footer {
     flex-direction: column;
@@ -169,9 +177,4 @@
   }
 }
 
-.social-media {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  background-color: #f8f9fa;
-}
+
