--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -7,15 +7,18 @@
 }
 #profile-pic-area {
   width: 90%;
+  height: 45vh;
   margin: 0 auto;
 }
 
 #profile-pic-bg {
   width: 100%;
   height: 25vh;
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  /* background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%); */
+  /* background-image: linear-gradient(-45deg, #009efd, #2af598, #23a6d5, #23d5ab); */
+  background-image: linear-gradient(-45deg, #000000, #2af598, #000000, #23d5ab);
 }
-
+/* background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%); */
 #profile-topic {
   font-size: 3rem;
   font-weight: 700;
@@ -23,6 +26,9 @@
   justify-content: center;
   align-items: center;
   color: white;
+  /* background: -webkit-linear-gradient(#2af598 0%, #2af5b8 47%, #2ac2f5 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 #profile-pic {
   position: relative;
@@ -37,6 +43,20 @@
 }
 #profile-pic img {
   width: 13vw;
-  /* border-radius: 50%; */
   object-fit: cover;
+}
+
+#profile-details {
+  width: 80%;
+  margin: 0 auto;
+}
+
+#profile-recipes {
+  width: 90%;
+  margin: 0 auto;
+}
+
+#profile-recipes p {
+  font-size: 2rem;
+  font-weight: 600;
 }
