--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -132,6 +132,7 @@
   gap: 20px;
   background-color: #f8f9fa;
   padding-bottom: 15px;
+  color: #509e2f;
 }
 
 @media screen and (max-width: 768px) {
