--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -64,21 +64,7 @@
   border-radius: 15px;
 }
 
-.remainingNav li:hover {
-  text-decoration: underline;
-  text-decoration-color: #509e2f;
-  text-decoration-thickness: 5px;
-  text-underline-offset: 5px; /* Adjust the value as needed */
-}
-
 #loginButtonNavbar {
-  background-color: green;
-  color: white;
-  border: "none";
-  opacity: 0.9;
+  background-color: #509e2f;
 }
 
-#loginButtonNavbar:hover {
-  text-decoration: none;
-  opacity: 1;
-}
