--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -14,11 +14,9 @@
 #profile-pic-bg {
   width: 100%;
   height: 25vh;
-  /* background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%); */
-  /* background-image: linear-gradient(-45deg, #009efd, #2af598, #23a6d5, #23d5ab); */
   background-image: linear-gradient(-45deg, #000000, #2af598, #000000, #23d5ab);
 }
-/* background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%); */
+
 #profile-topic {
   font-size: 3rem;
   font-weight: 700;
@@ -26,10 +24,8 @@
   justify-content: center;
   align-items: center;
   color: white;
-  /* background: -webkit-linear-gradient(#2af598 0%, #2af5b8 47%, #2ac2f5 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
 }
+
 #profile-pic {
   position: relative;
   display: flex;
@@ -41,9 +37,19 @@
   border-radius: 50%;
   overflow: hidden;
 }
+
 #profile-pic img {
   width: 13vw;
   object-fit: cover;
+}
+
+#profile-user {
+  position: relative;
+  top: -34vh;
+  left: 50vw;
+  font-size: 3rem;
+  font-weight: 800;
+  color: #000000;
 }
 
 #profile-details {
@@ -51,11 +57,22 @@
   margin: 0 auto;
 }
 
+#profile-details div {
+  display: flex;
+  font-size: 1.5rem;
+}
+
+#profile-details p {
+  width: 20vw;
+}
 #profile-recipes {
   width: 90%;
   margin: 0 auto;
 }
-
+.profile-details-tag {
+  font-weight: 600;
+  color: #509e2f;
+}
 #profile-recipes p {
   font-size: 2rem;
   font-weight: 600;
