--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   padding: 0.5rem 2rem;
   border-radius: 5px;
   box-shadow: 1px 2px 7px 0px rgba(0, 0, 0, 0.75);
-  margin:0 auto;
+  margin:10px 10px 1.5rem;
   background-color: #f8f9fa;
 
 
