--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -58,3 +58,16 @@
   font-size: 1.8rem;
   font-weight: 600;
 }
+
+#welcome-modal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+#welcome-modal h2 {
+  margin-top: 0;
+}
