home model done

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -64,26 +64,35 @@
   flex-direction: column;
 }
 
-#welcome-model h2 {
-  color: #509e2f;
-}
-
-#welcome-model h6 {
-  font-size: 0.8rem;
-  color: darkgreen;
-  padding: 0 10px;
-}
 #close-button {
   display: flex;
   justify-content: flex-end;
 }
 
+#close-button svg {
+  cursor: pointer;
+}
+
 #welcome-model-container {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#welcome-model-container h2 {
+  color: #509e2f;
+}
+
+#welcome-model-container h6 {
+  width: 80%;
+  font-size: 0.8rem;
+  padding: 0 10px;
 }
 
 #welcome-model-buttons {
-  margin: 30px auto 10px;
+  margin: 20px auto 10px;
   width: 80%;
   background-color: white;
   overflow: hidden;
@@ -105,18 +114,42 @@
 }
 
 #welcome-model-buttons a:hover {
-  background-color: #dfffd1;
-  color: #509e2f;
+  background-color: #509e2f;
+  color: #dfffd1;
   text-decoration: none;
 }
 
-#welcome-model-buttons input {
+#welcome-model-buttons button {
   background-color: rgba(255, 255, 255, 0);
-  width: 100%;
+  color: darkgreen;
   border: none;
   font-weight: 500;
 }
 
-#welcome-model-buttons input:hover {
-  color: #509e2f;
+#welcome-model-buttons button:hover {
+  color: #dfffd1;
+}
+
+#hover-underline-animation-2 {
+  display: inline-block;
+  position: relative;
+  /* color: #509e2f; */
+}
+
+#hover-underline-animation-2:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+#hover-underline-animation-2:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
