--- a/src/pages/SignUp/Signup.css
+++ b/src/pages/SignUp/Signup.css
@@ -75,16 +75,45 @@ h1 {
   color: grey;
 }
 
-#signup-modal {
+/* modal in the signup page */
+.signup-modal {
   text-align: center;
   margin-bottom: 20px;
 }
 
-#signup-modal h2 {
+.signup-modal h2 {
   color: #509e2f;
 }
 
-#signup-modal p {
+.signup-modal p {
   color: darkgreen;
   margin: 0;
+}
+
+.signup-modal-check {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-modal-check img {
+  width: 20%;
+  border-radius: 50%;
+  box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+  transform: translatey(0px);
+  animation: float 6s ease-in-out infinite;
+}
+
+@keyframes float {
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-20px);
+  }
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
 }
